--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,9 @@ target/generated-test-sources/
 target/maven-status/
 target/surefire-reports/
 target/test-classes/
+target/maven-archiver/
+
+*.jar
+
 
 
